--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -81,7 +81,6 @@ TelevisionScreenResolutions=(Description="4K Digital Cinema",Width=4096,Height=2
 UseMouseForTouch=False
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -106,8 +105,8 @@ CurrentPosGridSize=4
 CameraSpeed=8
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/Demo
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/Levels/MainMenu
 MRUItem2=/Game/Levels/Area1-Rework
 MRUItem3=/Game/Levels/Area2-MarketMeshStart
 MRUItem4=/Game/Levels/MechanicsLevel
@@ -215,7 +214,7 @@ HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCa
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 BaseArmour_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 BaseAccessory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Calc Offence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -281,7 +280,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/GW000979/InvInterface
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -304,15 +303,12 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
-OpenAssetsAtExit=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor
-OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
-OpenAssetsAtExit=/Game/Chloe/UI/Settings_Menu.Settings_Menu
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3046,6 +3042,227 @@ BillboardComponent.Tags=True
 BillboardComponent.ComponentReplication=True
 BillboardComponent.Cooking=True
 BillboardComponent.Events=True
+REINST_BaseAI_C_134.Variable=True
+REINST_BaseAI_C_134.Sockets=True
+REINST_BaseAI_C_134.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_134.Character Movement (General Settings)=True
+REINST_BaseAI_C_134.Character Movement: Walking=True
+REINST_BaseAI_C_134.Character Movement: Swimming=True
+REINST_BaseAI_C_134.Character Movement: Flying=True
+REINST_BaseAI_C_134.Character Movement: Custom Movement=True
+REINST_BaseAI_C_134.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_134.Character Movement (Networking)=True
+REINST_BaseAI_C_134.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_134.Character Movement=True
+REINST_BaseAI_C_134.Character Movement: Avoidance=True
+REINST_BaseAI_C_134.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_134.RootMotion=True
+REINST_BaseAI_C_134.NavMovement=True
+REINST_BaseAI_C_134.Velocity=True
+REINST_BaseAI_C_134.PlanarMovement=True
+REINST_BaseAI_C_134.MovementComponent=True
+REINST_BaseAI_C_134.Tags=True
+REINST_BaseAI_C_134.ComponentReplication=True
+REINST_BaseAI_C_134.Activation=True
+REINST_BaseAI_C_134.Cooking=True
+REINST_BaseAI_C_134.Events=True
+REINST_BaseAI_C_173.Variable=True
+REINST_BaseAI_C_173.Sockets=True
+REINST_BaseAI_C_173.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_173.Character Movement (General Settings)=True
+REINST_BaseAI_C_173.Character Movement: Walking=True
+REINST_BaseAI_C_173.Character Movement: Swimming=True
+REINST_BaseAI_C_173.Character Movement: Flying=True
+REINST_BaseAI_C_173.Character Movement: Custom Movement=True
+REINST_BaseAI_C_173.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_173.Character Movement (Networking)=True
+REINST_BaseAI_C_173.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_173.Character Movement=True
+REINST_BaseAI_C_173.Character Movement: Avoidance=True
+REINST_BaseAI_C_173.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_173.RootMotion=True
+REINST_BaseAI_C_173.NavMovement=True
+REINST_BaseAI_C_173.Velocity=True
+REINST_BaseAI_C_173.PlanarMovement=True
+REINST_BaseAI_C_173.MovementComponent=True
+REINST_BaseAI_C_173.Tags=True
+REINST_BaseAI_C_173.ComponentReplication=True
+REINST_BaseAI_C_173.Activation=True
+REINST_BaseAI_C_173.Cooking=True
+REINST_BaseAI_C_173.Events=True
+REINST_BaseAI_C_191.Variable=True
+REINST_BaseAI_C_191.Sockets=True
+REINST_BaseAI_C_191.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_191.Character Movement (General Settings)=True
+REINST_BaseAI_C_191.Character Movement: Walking=True
+REINST_BaseAI_C_191.Character Movement: Swimming=True
+REINST_BaseAI_C_191.Character Movement: Flying=True
+REINST_BaseAI_C_191.Character Movement: Custom Movement=True
+REINST_BaseAI_C_191.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_191.Character Movement (Networking)=True
+REINST_BaseAI_C_191.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_191.Character Movement=True
+REINST_BaseAI_C_191.Character Movement: Avoidance=True
+REINST_BaseAI_C_191.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_191.RootMotion=True
+REINST_BaseAI_C_191.NavMovement=True
+REINST_BaseAI_C_191.Velocity=True
+REINST_BaseAI_C_191.PlanarMovement=True
+REINST_BaseAI_C_191.MovementComponent=True
+REINST_BaseAI_C_191.Tags=True
+REINST_BaseAI_C_191.ComponentReplication=True
+REINST_BaseAI_C_191.Activation=True
+REINST_BaseAI_C_191.Cooking=True
+REINST_BaseAI_C_191.Events=True
+REINST_BaseAI_C_209.Variable=True
+REINST_BaseAI_C_209.Sockets=True
+REINST_BaseAI_C_209.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_209.Character Movement (General Settings)=True
+REINST_BaseAI_C_209.Character Movement: Walking=True
+REINST_BaseAI_C_209.Character Movement: Swimming=True
+REINST_BaseAI_C_209.Character Movement: Flying=True
+REINST_BaseAI_C_209.Character Movement: Custom Movement=True
+REINST_BaseAI_C_209.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_209.Character Movement (Networking)=True
+REINST_BaseAI_C_209.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_209.Character Movement=True
+REINST_BaseAI_C_209.Character Movement: Avoidance=True
+REINST_BaseAI_C_209.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_209.RootMotion=True
+REINST_BaseAI_C_209.NavMovement=True
+REINST_BaseAI_C_209.Velocity=True
+REINST_BaseAI_C_209.PlanarMovement=True
+REINST_BaseAI_C_209.MovementComponent=True
+REINST_BaseAI_C_209.Tags=True
+REINST_BaseAI_C_209.ComponentReplication=True
+REINST_BaseAI_C_209.Activation=True
+REINST_BaseAI_C_209.Cooking=True
+REINST_BaseAI_C_209.Events=True
+REINST_BaseAI_C_227.Variable=True
+REINST_BaseAI_C_227.Sockets=True
+REINST_BaseAI_C_227.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_227.Character Movement (General Settings)=True
+REINST_BaseAI_C_227.Character Movement: Walking=True
+REINST_BaseAI_C_227.Character Movement: Swimming=True
+REINST_BaseAI_C_227.Character Movement: Flying=True
+REINST_BaseAI_C_227.Character Movement: Custom Movement=True
+REINST_BaseAI_C_227.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_227.Character Movement (Networking)=True
+REINST_BaseAI_C_227.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_227.Character Movement=True
+REINST_BaseAI_C_227.Character Movement: Avoidance=True
+REINST_BaseAI_C_227.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_227.RootMotion=True
+REINST_BaseAI_C_227.NavMovement=True
+REINST_BaseAI_C_227.Velocity=True
+REINST_BaseAI_C_227.PlanarMovement=True
+REINST_BaseAI_C_227.MovementComponent=True
+REINST_BaseAI_C_227.Tags=True
+REINST_BaseAI_C_227.ComponentReplication=True
+REINST_BaseAI_C_227.Activation=True
+REINST_BaseAI_C_227.Cooking=True
+REINST_BaseAI_C_227.Events=True
+REINST_BaseAI_C_245.Variable=True
+REINST_BaseAI_C_245.Sockets=True
+REINST_BaseAI_C_245.Character Movement: Jumping / Falling=True
+REINST_BaseAI_C_245.Character Movement (General Settings)=True
+REINST_BaseAI_C_245.Character Movement: Walking=True
+REINST_BaseAI_C_245.Character Movement: Swimming=True
+REINST_BaseAI_C_245.Character Movement: Flying=True
+REINST_BaseAI_C_245.Character Movement: Custom Movement=True
+REINST_BaseAI_C_245.Character Movement (Rotation Settings)=True
+REINST_BaseAI_C_245.Character Movement (Networking)=True
+REINST_BaseAI_C_245.Character Movement: Physics Interaction=True
+REINST_BaseAI_C_245.Character Movement=True
+REINST_BaseAI_C_245.Character Movement: Avoidance=True
+REINST_BaseAI_C_245.Character Movement: NavMesh Movement=True
+REINST_BaseAI_C_245.RootMotion=True
+REINST_BaseAI_C_245.NavMovement=True
+REINST_BaseAI_C_245.Velocity=True
+REINST_BaseAI_C_245.PlanarMovement=True
+REINST_BaseAI_C_245.MovementComponent=True
+REINST_BaseAI_C_245.Tags=True
+REINST_BaseAI_C_245.ComponentReplication=True
+REINST_BaseAI_C_245.Activation=True
+REINST_BaseAI_C_245.Cooking=True
+REINST_BaseAI_C_245.Events=True
+REINST_BaseAI_C_263.Variable=True
+REINST_BaseAI_C_263.TransformCommon=True
+REINST_BaseAI_C_263.Sockets=True
+REINST_BaseAI_C_263.Shape=True
+REINST_BaseAI_C_263.Navigation=True
+REINST_BaseAI_C_263.Rendering=True
+REINST_BaseAI_C_263.Physics=True
+REINST_BaseAI_C_263.Collision=True
+REINST_BaseAI_C_263.Tags=True
+REINST_BaseAI_C_263.ComponentReplication=True
+REINST_BaseAI_C_263.Cooking=True
+REINST_BaseAI_C_263.Events=True
+REINST_BaseAI_C_281.Variable=True
+REINST_BaseAI_C_281.TransformCommon=True
+REINST_BaseAI_C_281.Sockets=True
+REINST_BaseAI_C_281.Shape=True
+REINST_BaseAI_C_281.Navigation=True
+REINST_BaseAI_C_281.Rendering=True
+REINST_BaseAI_C_281.Physics=True
+REINST_BaseAI_C_281.Collision=True
+REINST_BaseAI_C_281.Tags=True
+REINST_BaseAI_C_281.ComponentReplication=True
+REINST_BaseAI_C_281.Cooking=True
+REINST_BaseAI_C_281.Events=True
+REINST_BaseAI_C_299.Variable=True
+REINST_BaseAI_C_299.TransformCommon=True
+REINST_BaseAI_C_299.Sockets=True
+REINST_BaseAI_C_299.Shape=True
+REINST_BaseAI_C_299.Navigation=True
+REINST_BaseAI_C_299.Rendering=True
+REINST_BaseAI_C_299.Physics=True
+REINST_BaseAI_C_299.Collision=True
+REINST_BaseAI_C_299.Tags=True
+REINST_BaseAI_C_299.ComponentReplication=True
+REINST_BaseAI_C_299.Cooking=True
+REINST_BaseAI_C_299.Events=True
+REINST_BaseAI_C_317.Variable=True
+REINST_BaseAI_C_317.TransformCommon=True
+REINST_BaseAI_C_317.Sockets=True
+REINST_BaseAI_C_317.Shape=True
+REINST_BaseAI_C_317.Navigation=True
+REINST_BaseAI_C_317.Rendering=True
+REINST_BaseAI_C_317.Physics=True
+REINST_BaseAI_C_317.Collision=True
+REINST_BaseAI_C_317.Tags=True
+REINST_BaseAI_C_317.ComponentReplication=True
+REINST_BaseAI_C_317.Cooking=True
+REINST_BaseAI_C_317.Events=True
+REINST_BaseAI_C_335.Variable=True
+REINST_BaseAI_C_335.TransformCommon=True
+REINST_BaseAI_C_335.Sockets=True
+REINST_BaseAI_C_335.Shape=True
+REINST_BaseAI_C_335.Navigation=True
+REINST_BaseAI_C_335.Rendering=True
+REINST_BaseAI_C_335.Physics=True
+REINST_BaseAI_C_335.Collision=True
+REINST_BaseAI_C_335.Tags=True
+REINST_BaseAI_C_335.ComponentReplication=True
+REINST_BaseAI_C_335.Cooking=True
+REINST_BaseAI_C_335.Events=True
+REINST_BaseAI_C_353.Variable=True
+REINST_BaseAI_C_353.TransformCommon=True
+REINST_BaseAI_C_353.Sockets=True
+REINST_BaseAI_C_353.Animation=True
+REINST_BaseAI_C_353.Mesh=True
+REINST_BaseAI_C_353.Materials=True
+REINST_BaseAI_C_353.Clothing=True
+REINST_BaseAI_C_353.ClothingSimulation=True
+REINST_BaseAI_C_353.Physics=True
+REINST_BaseAI_C_353.Collision=True
+REINST_BaseAI_C_353.Lighting=True
+REINST_BaseAI_C_353.Rendering=True
+REINST_BaseAI_C_353.Tags=True
+REINST_BaseAI_C_353.ComponentReplication=True
+REINST_BaseAI_C_353.Activation=True
+REINST_BaseAI_C_353.Cooking=True
+REINST_BaseAI_C_353.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3181,9 +3398,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character=
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn=
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3232,7 +3449,7 @@ BTTaskNode=
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout"
 Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -3257,7 +3474,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C=
+BaseAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3294,6 +3511,15 @@ K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 K2Node="\"Object.PinOptions.PinNames\" "
 ChangeLevelActor_C=
+REINST_BaseAI_C_209="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_BaseAI_C_227="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_BaseAI_C_245="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_BaseAI_C_263="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_BaseAI_C_281="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_BaseAI_C_299="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+REINST_BaseAI_C_317="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
+REINST_BaseAI_C_335="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+REINST_BaseAI_C_353="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4139,22 +4365,22 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chloe/UI/Settings_Menu
-MRUItem1=/Game/Chloe/UI/Start_Menu
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem4=/Game/AIAgent/BossAI
-MRUItem5=/Game/Levels/Demo
-MRUItem6=/Game/AIAgent/BaseAI
-MRUItem7=/Game/Levels/Area1-Rework
-MRUItem8=/Game/Levels/Area2-MarketMeshStart
-MRUItem9=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem10=/Game/GameMode/GameMode1
-MRUItem11=/Game/Levels/MechanicsLevel
-MRUItem12=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem13=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem14=/Game/Levels/Temple-Area
-MRUItem15=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/Levels/Demo
+MRUItem1=/Game/AIAgent/BaseAI
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Chloe/UI/Settings_Menu
+MRUItem5=/Game/Chloe/UI/Start_Menu
+MRUItem6=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem7=/Game/AIAgent/BossAI
+MRUItem8=/Game/Levels/Area1-Rework
+MRUItem9=/Game/Levels/Area2-MarketMeshStart
+MRUItem10=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem11=/Game/GameMode/GameMode1
+MRUItem12=/Game/Levels/MechanicsLevel
+MRUItem13=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem14=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem15=/Game/Levels/Temple-Area
 MRUItem16=/Game/Chloe/UI/Pause_Menu
 MRUItem17=/Game/T019847G/Boss/BossBehaviourTree
 MRUItem18=/Game/T019847G/Boss/BossController
