change to base AI

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,14 +105,14 @@ CurrentPosGridSize=4
 CameraSpeed=8
 
 [MRU]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/Area1-Rework
-MRUItem3=/Game/Levels/Area2-MarketMeshStart
-MRUItem4=/Game/Levels/MechanicsLevel
-MRUItem5=/Game/Levels/Temple-Area
-MRUItem6=/Game/Levels/Area2-Market
-MRUItem7=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/Levels/Demo
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/Area1-Rework
+MRUItem4=/Game/Levels/Area2-MarketMeshStart
+MRUItem5=/Game/Levels/MechanicsLevel
+MRUItem6=/Game/Levels/Temple-Area
+MRUItem7=/Game/Levels/Area2-Market
 MRUItem8=/Game/Levels/texturedzoo
 MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem10=/Game/Levels/TerrainMap
@@ -180,7 +180,7 @@ SphereComponent=SphereComponent.Collision.Collision,
 TopDownCharacter_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 AIbot_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,
-K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+K2Node_VariableGet=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,BaseAI_C.Physics.ConstraintsGroup,BaseAI_C.Collision.Collision,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 ObjectProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 FloatProperty=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
@@ -280,7 +280,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -303,12 +303,14 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
 OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
+OpenAssetsAtExit=/Game/EnemyAgent/EnemyData.EnemyData
+OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3263,6 +3265,18 @@ REINST_BaseAI_C_353.ComponentReplication=True
 REINST_BaseAI_C_353.Activation=True
 REINST_BaseAI_C_353.Cooking=True
 REINST_BaseAI_C_353.Events=True
+BossAI_C.ComponentTick=True
+BossAI_C.Shape=True
+BossAI_C.Navigation=True
+CorruptedSlave_C.Stats=True
+CorruptedSlave_C.Status=True
+CorruptedSlave_C.Bleed=True
+CorruptedSlave_C.Stun=True
+CorruptedSlave_C.Crystalise=True
+CorruptedSlave_C.Blind=True
+CorruptedSlave_C.Poison=True
+CorruptedSlave_C.LifeSteal=True
+CorruptedSlave_C.Drop=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3378,6 +3392,7 @@ None=======
 /Game/EnemyAgent/EnemyData.EnemyData=1
 /Game/AIAgent/NewController.NewController=1
 /Game/GameMode/GameMode1.GameMode1=0
+/Game/AIAgent/BossAI.BossAI=1
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3398,9 +3413,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Character="\"Object.StatusChance\" \"Object.StatusChance\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn="\"Object.StatusChance\" \"Object.StatusChance\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3474,7 +3489,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+BaseAI_C="\"Object.StatusChance\" \"Object.StatusChance\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3520,6 +3535,7 @@ REINST_BaseAI_C_299="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_BaseAI_C_317="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
 REINST_BaseAI_C_335="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_BaseAI_C_353="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+BossAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3549,7 +3565,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../../Users/gw000979/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4293,6 +4309,7 @@ LastLogListing=PIE
 /Game/Materials=(R=0.500000,G=0.240541,B=0.050361,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave;
 RecentlyPlaced=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor;
 RecentlyPlaced=/Game/T019847G/FadingMeshes/NewFade_M.NewFade_M;
 RecentlyPlaced=/Game/Materials/Green.Green;
@@ -4309,7 +4326,6 @@ RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart2.equipmentstationpart2;
 RecentlyPlaced=/Game/Models/Dylan/equipmentstationpart1.equipmentstationpart1;
 RecentlyPlaced=/Game/Models/finishedassets/fence/LP_Fence.LP_Fence;
 RecentlyPlaced=/Game/Models/Ben/gate.gate;
-RecentlyPlaced=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave;
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/c024816h/Elixir.Elixir;
@@ -4365,26 +4381,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/AIAgent/BaseAI
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Chloe/UI/Settings_Menu
-MRUItem5=/Game/Chloe/UI/Start_Menu
-MRUItem6=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem7=/Game/AIAgent/BossAI
-MRUItem8=/Game/Levels/Area1-Rework
-MRUItem9=/Game/Levels/Area2-MarketMeshStart
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem11=/Game/GameMode/GameMode1
-MRUItem12=/Game/Levels/MechanicsLevel
-MRUItem13=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem14=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem15=/Game/Levels/Temple-Area
-MRUItem16=/Game/Chloe/UI/Pause_Menu
-MRUItem17=/Game/T019847G/Boss/BossBehaviourTree
-MRUItem18=/Game/T019847G/Boss/BossController
-MRUItem19=/Game/AIAgent/NewController
+MRUItem0=/Game/EnemyAgent/CorruptedSlave
+MRUItem1=/Game/EnemyAgent/EnemyData
+MRUItem2=/Game/AIAgent/BaseAI
+MRUItem3=/Game/AIAgent/BossAI
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem6=/Game/Levels/MainMenu
+MRUItem7=/Game/Chloe/UI/Settings_Menu
+MRUItem8=/Game/Chloe/UI/Start_Menu
+MRUItem9=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem10=/Game/Levels/Area1-Rework
+MRUItem11=/Game/Levels/Area2-MarketMeshStart
+MRUItem12=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem13=/Game/GameMode/GameMode1
+MRUItem14=/Game/Levels/MechanicsLevel
+MRUItem15=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem16=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem17=/Game/Levels/Temple-Area
+MRUItem18=/Game/Chloe/UI/Pause_Menu
+MRUItem19=/Game/T019847G/Boss/BossBehaviourTree
 
 [WidgetTemplatesExpanded]
 Extra=False
