--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -106,12 +106,12 @@ CameraSpeed=8
 
 [MRU]
 MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Levels/Area1-Rework
+MRUItem1=/Game/Levels/MechanicsLevel
+MRUItem2=/Game/Levels/MainMenu
 MRUItem3=/Game/Levels/Area2-MarketMeshStart
-MRUItem4=/Game/Levels/MechanicsLevel
-MRUItem5=/Game/Levels/Temple-Area
-MRUItem6=/Game/Levels/Area2-Market
+MRUItem4=/Game/Levels/Temple-Area
+MRUItem5=/Game/Levels/Area2-Market
+MRUItem6=/Game/Levels/Area1-Rework
 MRUItem7=/Game/TopDownBP/Maps/TopDownExampleMap
 MRUItem8=/Game/Levels/texturedzoo
 MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -256,6 +256,7 @@ Pause_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueC
 Start_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 ChangeLevelActor_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 Settings_Menu_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+BossAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -280,7 +281,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -308,7 +309,6 @@ LastLevel=/Game/Levels/Demo
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3263,6 +3263,9 @@ REINST_BaseAI_C_353.ComponentReplication=True
 REINST_BaseAI_C_353.Activation=True
 REINST_BaseAI_C_353.Cooking=True
 REINST_BaseAI_C_353.Events=True
+BossAI_C.ComponentTick=True
+BossAI_C.Shape=True
+BossAI_C.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3378,13 +3381,15 @@ None=======
 /Game/EnemyAgent/EnemyData.EnemyData=1
 /Game/AIAgent/NewController.NewController=1
 /Game/GameMode/GameMode1.GameMode1=0
+/Game/T019847G/Boss/BossPhases.BossPhases=0
+/Game/T019847G/Boss/BossAI.BossAI=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
@@ -3398,9 +3403,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Character=
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+Pawn=
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3474,7 +3479,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+BaseAI_C="\"Object.Phases\" \"Object.Phases\" "
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3520,6 +3525,7 @@ REINST_BaseAI_C_299="\"Object.Character.CharacterMovement.Object.NavMovement.Nav
 REINST_BaseAI_C_317="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[9]\" "
 REINST_BaseAI_C_335="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_BaseAI_C_353="\"Object.Character.Mesh.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+BossAI_C="\"Object.Phases\" \"Object.Phases\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -3529,7 +3535,7 @@ FoliageType_InstancedStaticMesh.Mesh=True
 GameMapsSettings.DefaultModes=True
 
 [RootWindow]
-ScreenPosition=X=67.000 Y=52.000
+ScreenPosition=X=2149.000 Y=402.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -4365,26 +4371,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/AIAgent/BaseAI
-MRUItem2=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Chloe/UI/Settings_Menu
-MRUItem5=/Game/Chloe/UI/Start_Menu
-MRUItem6=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem7=/Game/AIAgent/BossAI
-MRUItem8=/Game/Levels/Area1-Rework
-MRUItem9=/Game/Levels/Area2-MarketMeshStart
-MRUItem10=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem11=/Game/GameMode/GameMode1
-MRUItem12=/Game/Levels/MechanicsLevel
-MRUItem13=/Game/TopDownBP/Blueprints/I_PlayerStatus
-MRUItem14=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem15=/Game/Levels/Temple-Area
-MRUItem16=/Game/Chloe/UI/Pause_Menu
-MRUItem17=/Game/T019847G/Boss/BossBehaviourTree
-MRUItem18=/Game/T019847G/Boss/BossController
-MRUItem19=/Game/AIAgent/NewController
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem2=/Game/T019847G/Boss/BossPhases
+MRUItem3=/Game/T019847G/Boss/BossAI
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/Levels/MechanicsLevel
+MRUItem6=/Game/Levels/MainMenu
+MRUItem7=/Game/Levels/Area2-MarketMeshStart
+MRUItem8=/Game/Levels/Temple-Area
+MRUItem9=/Game/Levels/Area2-Market
+MRUItem10=/Game/Levels/Area1-Rework
+MRUItem11=/Game/AIAgent/BaseAI
+MRUItem12=/Game/Chloe/UI/Settings_Menu
+MRUItem13=/Game/Chloe/UI/Start_Menu
+MRUItem14=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem15=/Game/AIAgent/BossAI
+MRUItem16=/Game/GameMode/GameMode1
+MRUItem17=/Game/TopDownBP/Blueprints/I_PlayerStatus
+MRUItem18=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem19=/Game/Chloe/UI/Pause_Menu
 
 [WidgetTemplatesExpanded]
 Extra=False
